fix scrollbar

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -6,3 +6,4 @@ $basic-spacing-mini: calc(var(--s-basic-spacing) / 2);
 $basic-spacing-extra-small: calc(var(--s-basic-spacing) * 0.75);
 $basic-spacing-small: calc(var(--s-basic-spacing) * 1.5);
 $basic-spacing-medium: calc(var(--s-basic-spacing) * 2);
+$basic-spacing-big: calc(var(--s-basic-spacing) * 3);
